corrects item alignment in questcard header

--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ input[type="radio"] {
 .quest-card-header {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   padding-right: 15px;
   padding-left: 15px;
 }
